--- a/merobazar/templates/merobazar/Index.html
+++ b/merobazar/templates/merobazar/Index.html
@@ -7,8 +7,7 @@
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="">
-        <style>
-        </style>
+        <style></style>
     </head>
     <body>
         <p>This is the starting of the code </p>
