--- a/adminapp/templates/adminapp/subcategory_form.html
+++ b/adminapp/templates/adminapp/subcategory_form.html
@@ -1,6 +1,6 @@
 {% extends 'adminapp/admin_base.html' %}
 
-{% block title %}{{ title }}{% endblock %}
+{% block title %}Edit Subcategory{% endblock %}
 
 {% block content %}
 {% if messages %}
